Fix sharing icons alignment
Use font-size instead of height to set size of icons.

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 }
 
 .sharing svg {
-  height: 4vh;
+  font-size: 4vh;
   color: #242424;
   opacity: 0.8;
 }
